fix(ui): Fix an UI dropdown flickering issue (#5772)

--- a/ui/src/app/workflows/components/workflow-node-info/workflow-node-info.scss
+++ b/ui/src/app/workflows/components/workflow-node-info/workflow-node-info.scss
@@ -2,7 +2,7 @@
 
 .workflow-node-info {
 
-    max-height: calc(100vh - 2 * #{$top-bar-height});
+    height: calc(100vh - 2 * #{$top-bar-height});
     overflow-y: auto;
 
     .tabs {
